src/snapshots/yarek_music__app__tests__moving_into_the_tracks_and_down.snap
---
source: src/app_tests.rs
assertion_line: 65
expression: s
---
┌ Library ───────────────────┐┌ Liked music · 3 songs ─────────────────────────────────────────────┐
│› Liked music 3             ││#      Title                           Artist                Time   │
│  Road trip 0               ││    1  ♥ Bohemian Rhapsody             Queen                    5:59│
│                            ││    2  ♥ Shape of You                  Ed Sheeran               4:23│
│                            ││    3  ♥ Smells Like Teen Spirit       Nirvana                  4:38│
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
┌ ■ nothing playing ──────────────────────────────────────────── autoplay  shuffle repeat vol  50% ┐
│0:00 ─────────────────────────────────────────────────────────────────────────────────────────────│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                    ? help · q quit
