src/snapshots/yarek_music__app__tests__playlist_menu.snap
---
source: src/app_tests.rs
assertion_line: 83
expression: screen(&mut app)
---
┌ Library ───────────────────┐┌ Liked music · 3 songs ─────────────────────────────────────────────┐
│› Liked music 3             ││#      Title                           Artist                Time   │
│  Road trip 0               ││    1  ♥ Bohemian Rhapsody             Queen                    5:59│
│                            ││    2  ♥ Shape of You                  Ed Sheeran               4:23│
│                            ││    3  ♥ Smells Like Teen Spirit       Nirvana                  4:38│
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            │┌ Playlist ────────────────────────────┐                             │
│                            ││› New playlist…                       │                             │
│                            ││  Download all for offline            │                             │
│                            │└──────────────────────────────────────┘                             │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
┌ ■ nothing playing ──────────────────────────────────────────── autoplay  shuffle repeat vol  50% ┐
│0:00 ─────────────────────────────────────────────────────────────────────────────────────────────│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                    ? help · q quit
