src/snapshots/yarek_music__app__tests__search_results_replace_the_list.snap
---
source: src/app_tests.rs
assertion_line: 117
expression: screen(&mut app)
---
┌ Library ───────────────────┐┌ “hits” · 3 Songs Albums Artists Playlists [ ] ─────────────────────┐
│› Liked music 3             ││#      Title                           Artist                Time   │
│  Road trip 0               ││    1  Hit number 0                    Test Artist              3:20│
│                            ││    2  Hit number 1                    Test Artist              3:21│
│                            ││    3  Hit number 2                    Test Artist              3:22│
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
┌ ■ nothing playing ──────────────────────────────────────────── autoplay  shuffle repeat vol  50% ┐
│0:00 ─────────────────────────────────────────────────────────────────────────────────────────────│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                    ? help · q quit
